# finacolada

./: .gitignore  Cargo.toml  README.md  test.xlsx
examples/: 005930_FS.parquet  corp_code_list.parquet  krx_individual_kosdaq.parquet  krx_individual_kosdaq.xlsx  krx_individual_kospi.parquet  krx_individual_kospi.xlsx  krx_merged.parquet  krx_merged_kosdaq.parquet  krx_merged_kospi.parquet  krx_sector_kosdaq.parquet  krx_sector_kosdaq.xlsx  krx_sector_kospi.parquet  krx_sector_kospi.xlsx  latest_wics_data.parquet  wics_20230126.json
src/: main.rs
src/data_crawling/: biz_day.rs  get_krx_ind.rs  krx.rs  mod.rs  wics.rs  working_date.rs
src/data_crawling/krx/: .merge_table.rs.pending-snap  download.rs  merge_table.rs  mod.rs  save.rs
src/data_crawling/opendart/: business_report.rs  corp_code.rs  disclosure.rs  mod.rs  single_account.rs
src/data_crawling/snapshots/: finacolada__data_crawling__get_krx_ind__test__download_sector_data_from_krx_for_kosdaq.snap  finacolada__data_crawling__get_krx_ind__test__download_sector_data_from_krx_for_kospi.snap  finacolada__data_crawling__get_krx_ind__test__get_generated_otp_from_krx.snap  finacolada__data_crawling__get_krx_ind__test__get_generated_otp_from_krx.snap.new  finacolada__data_crawling__krx__test__can_read_converted_individual_parquet_as_lazyframe.snap  finacolada__data_crawling__krx__test__can_read_converted_sector_parquet_as_lazyframe.snap  finacolada__data_crawling__krx__test__download_individual_data_thrice_with_same_otp-2.snap  finacolada__data_crawling__krx__test__download_individual_data_thrice_with_same_otp-3.snap  finacolada__data_crawling__krx__test__download_individual_kosdaq.snap  finacolada__data_crawling__krx__test__download_individual_kosdaq_data.snap  finacolada__data_crawling__krx__test__download_individual_kospi_data.snap  finacolada__data_crawling__krx__test__download_sector_kosdaq_data.snap  (+6 more)
src/utils/: convert_to_parquet.rs  mod.rs  organize.rs
(+11 files in other folders)
