[package]
name = "finacolada"
version = "0.1.0"
edition = "2021"

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[dependencies]
anyhow = "1"
calamine = "0.19"
polars = { version = "0.26", features = ["parquet", "lazy"] }
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
chrono = "0.4"
insta = { version = "1", features = ["yaml"] }
