[package]
name = "finacolada"
version = "0.1.0"
edition = "2021"

[profile.dev.package.insta]
opt-level = 3

[dependencies]
anyhow = "1"
calamine = "0.19"
chrono = "0.4"
polars = { version = "0.26", features = ["parquet", "lazy", "strings"] }
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
ron = "0.8.0"
scraper = "0.14"
serde = { version = "1", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1"
table-extract = "0.2.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
zip = "0.6.4"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
